--- a/README.org
+++ b/README.org
@@ -1,1 +1,21 @@
 * tehagenaci: ročníkový projekt
+
+*Názov*: Testovanie hardvérových generátorov náhodných čísiel
+
+** Študent
+
+*Meno*: Anton Kica
+
+*Email*: kica6@uniba.sk
+
+
+** Školiaci
+
+*Meno*: RNDr. Richard Ostertág, PhD.
+
+*Email*: ostertag@dcs.fmph.uniba.sk
+
+** Cieľe projektu
+
+1. Vyvinúť alebo nájsť vhodné existujúce aplikácie pre testovanie kvality náhodných generátorov
+2. Získať náhodné dáta zo zvolených HW generátorov za rôznych podmienok, otestovať kvalitu súčiastok a pozorovať prípadné zmeny parametrov
