--- a/jupyterbook.ipynb
+++ b/jupyterbook.ipynb
@@ -8,7 +8,7 @@
     "# tehagenaci: ročníkový projekt\n",
     "\n",
     "## O projekte\n",
-    "**Názov**: Testovanie hardvérových generátorov náhodných čísiel\n",
+    "**Názov**: Testovanie hardvérových generátorov náhodných čísel\n",
     "\n",
     "### Študent\n",
     "**Meno**: Anton Kica\n",
@@ -21,7 +21,7 @@
     "\n",
     "**Email**: ostertag@dcs.fmph.uniba.sk\n",
     "\n",
-    "### Cieľe projektu\n",
+    "### Ciele projektu\n",
     "\n",
     "1. Vyvinúť alebo nájsť vhodné existujúce aplikácie pre testovanie kvality náhodných generátorov\n",
     "\n",
@@ -33,19 +33,19 @@
     "- src/lcg-generators\n",
     "    - zdrojový kód pre generovanie vzoriek _ZX81_ a _numerical-recipes_ pomocou algoritmu lcg\n",
     "- src/processor\n",
-    "    - zdrovjový kód pre spracovávanie vygenerovaných vzoriek\n",
+    "    - zdrovový kód pre spracovanie vygenerovaných vzoriek\n",
     "    - obsahuje jednoduché testy pre testovanie korektnosti kódu\n",
     "\n",
     "## Tak ku projektu...\n",
     "\n",
-    "Naša práca pozostávala z troch štadíí\n",
+    "Naša práca pozostávala z troch štadií\n",
     "1. Generovanie vzoriek\n",
     "2. Spracovanie vygenerovaných vzoriek\n",
     "3. Analýza údajov zo vzoriek a záver\n",
     "\n",
     "### Generovanie vzoriek\n",
     "\n",
-    "Nášou úlohou bolo otestovať súčiastku ATECC108, teda usúdiť kvalitu generovaných náhodných čísel za rozličných podmienok.\n",
+    "Našou úlohou bolo otestovať súčiastku ATECC108, teda posúdiť kvalitu generovaných náhodných čísel za rozličných podmienok.\n",
     "Rozhodli sme sa túto súčiastku testovať v troch prostrediach s rozličnými teplotami - 0°C, 21°C a 40°C. \n",
     "\n",
     "Tiež sme sa pre referenciu rozhodli softvérovo vygenerovať vzorky náhodných čísel, ktoré sú zdanlivo náhodné, no ako uvidíme, nie úplne.\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "167b01b5",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "37c61b99",
    "metadata": {
     "scrolled": true
@@ -218,13 +218,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34ff400c",
+   "id": "37c63c35",
    "metadata": {},
    "source": [
     "## Spracované vzorky\n",
     "Jednoduché vysvetlenie:\n",
-    "- farba dočervená je väčšie množstvo, než očakávané\n",
-    "- farba domodra je menšie mnozštvo, než očakávané"
+    "- farba do červená je väčšie množstvo, než očakávané\n",
+    "- farba do modra je menšie množstvo, než očakávané"
    ]
   },
   {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "ee79979a",
    "metadata": {
     "scrolled": true
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "1831bbc0",
    "metadata": {},
    "outputs": [
@@ -352,28 +352,28 @@
    "id": "ea368be9",
    "metadata": {},
    "source": [
-    "### Vysvetlenie\n",
+    "### Popis grafov\n",
     "#### Matice\n",
     "* n->m je matica $n×m$, napr. 2->1 je matica $2×1$ \n",
-    "* vypočítali sme štyri matice pre každú vzorku - $m_{2×1}$,$m_{2×2}$,$m_{4×2}$,$m_{4×4}$\n",
+    "* vypočítali sme štyri matice pre každú vzorku - $m_{2×1},m_{2×2},m_{4×2},m_{4×4}$\n",
     "* na vrchu je názov vzorky\n",
     "\n",
     "#### Os $x$\n",
     "* na osi $x$ sa nachádza $m$-tica bitov\n",
     "#### Os $y$\n",
     "* na osi $y$ sa nachádza $n$-tica bitov\n",
-    "* percentá zobrazujú precentuálny podiel riadku zo všetkých porovnaní\n",
+    "* percentá zobrazujú percentuálny podiel riadku zo všetkých porovnaní\n",
     "* súčet percent na osi $y$ je $100\\%$ \n",
     "\n",
     "#### Bunka $b_{n,m}$\n",
-    "* maticová bunka $b_{n,m}$ vyjadruje odchylku danej bunky vrámci riadku\n",
-    "* odchylka je rozdiel výskytu $n-m$-tice a očakaváneho počtu $n-m$-tice v podieli súčtu všetkých $m$-tíc v riadku\n",
+    "* maticová bunka $b_{n,m}$ vyjadruje odchylku danej bunky v rámci riadku\n",
+    "* odchylka je rozdiel výskytu $n-m$-tice a očakávaného počtu $n-m$-tice v podieli súčtu všetkých $m$-tíc v riadku\n",
     "    * majme maticu $2×1$, pozrieme sa dvojicu $00$-$0$\n",
     "    * $\\#_{expected_{m}}=1/2=0.5$ \n",
     "    * $b_{n,m}=134234434$\n",
     "    * $\\#_{total_{m_{00}}}=268486962$\n",
     "    * potom $odchylka=\\#_{expected_{m}} - \\frac{b_{n,m}}{\\#_{total_{m_{00}}}}=0.5 - \\frac{134234434}{268486962}=0.00003369623=0.0034\\%$\n",
-    "* súčet ochyliek v riadku je 0%"
+    "* súčet ochýlok v riadku je 0%"
    ]
   },
   {
@@ -383,15 +383,15 @@
    "source": [
     "### Analýza a záver\n",
     "#### LCG\n",
-    "U vzoriek vygenerovaných LCG je pekne vidieť najmä na matici $4×4$ náchylnosť generovať niektore štvorice vo väčšom počte. Konkrétne, vo vzorke\n",
+    "U vzoriek vygenerovaných LCG je pekne vidieť najmä na matici $4×4$ náchylnosť generovať niektoré štvorice vo väčšom počte. Konkrétne, vo vzorke\n",
     "* _numerical-recipes_ sa za 4-icou $0011$ sa dosť často vyskytovala 4-ica $0000$\n",
     "* _XZ81_ sa za 4-icou $0000$ sa dosť často vyskytovala 4-ica $0000$\n",
     "\n",
     "#### ATECC108\n",
-    "U vzoriek generovaných ATECC108 už takéto náchylnosti nemožno pozorovať - ani naprieč rôznym prostrediam. Odchylky od výskytov sú rádovo až v mikropercentách ($μ\\%$) a celá matica je zafarbéna ako lúka.\n",
+    "U vzoriek generovaných ATECC108 už takéto náchylnosti nemožno pozorovať - ani medzi rôznymi prostrediam. Odchylky od výskytov sú rádovo až v mikro percentách ($μ\\%$) a celá matica je zafarbéna.\n",
     "\n",
     "#### Výsledok\n",
-    "Pre generátor ATECC108 sme nespozorvali žiadnu signifikantnú zmenu medzi prostrediami. Zdá sa, že na škále 0°C až 40°C nedochádza k žiadnej zmene pri generovaní náhodných čísel.\n",
+    "Pre generátor ATECC108 sme nespozorovali žiadnu signifikantnú zmenu medzi prostrediami. Zdá sa, že na škále 0°C až 40°C nedochádza k žiadnej zmene pri generovaní náhodných čísel.\n",
     "\n",
     "#### v závere\n",
     "Nenašli sme žiadne nezrovnalosti, preto usudzujeme, že bežné teploty okolitého prostredia nemajú vplyv na kvalitu generátora ATECC108."
